<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@color/background"
    android:orientation="vertical" >
    
  <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="16dip"
		android:paddingRight="16dip"
	    android:orientation="vertical" >
    
    	<!-- checkboxes for suggested strategies-->
	    <TextView android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="20dp"
	        android:paddingBottom="10dp"
	        style="?android:attr/listSeparatorTextViewStyle" 
	        android:text="@string/strategies" />
	    
	     

	    
	    <!-- 1 -->
	    <CheckBox android:id="@+id/checkbox_strategy_plannedIgnoring"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/strategy_plannedIgnoring"
	        android:onClick="onCheckboxClicked"/>
	    <!-- 2 -->
	    <CheckBox android:id="@+id/checkbox_strategy_behaviorLog"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/strategy_behaviorLog"
	        android:onClick="onCheckboxClicked"/>
	    <!-- 3 -->
	    <CheckBox android:id="@+id/checkbox_strategy_reteachReviewExpectations"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/strategy_reteachReviewExpectations"
	        android:onClick="onCheckboxClicked"/>
	    <!-- 4 -->
	    <CheckBox android:id="@+id/checkbox_strategy_restorativeAction"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/strategy_restorativeAction"
	        android:onClick="onCheckboxClicked"/>
	    <!-- 5 -->
	    <CheckBox android:id="@+id/checkbox_strategy_apologyVerbalAndOrWritten"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/strategy_apologyVerbalAndOrWritten"
	        android:onClick="onCheckboxClicked"/>
	    <!-- 6 -->
	    <CheckBox android:id="@+id/checkbox_strategy_scholarPairingTimeOut"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/strategy_scholarPairingTimeOut"
	        android:onClick="onCheckboxClicked"/>
	    <!-- 7 -->
	    <CheckBox android:id="@+id/checkbox_strategy_timeOut"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/strategy_timeOut"
	        android:onClick="onCheckboxClicked"/>
	    <!-- 8 -->
	    <CheckBox android:id="@+id/checkbox_strategy_ageAppropriateWritingActivity"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/strategy_ageAppropriateWritingActivity"
	        android:onClick="onCheckboxClicked"/>
	    <!-- 9 -->
	    <CheckBox android:id="@+id/checkbox_strategy_behaviorProcessingForm"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/strategy_behaviorProcessingForm"
	        android:onClick="onCheckboxClicked"/>
	    <!-- 10 -->
	    <CheckBox android:id="@+id/checkbox_strategy_teacherScholarConversationOutsideClassroom"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/strategy_teacherScholarConversationOutsideClassroom"
	        android:onClick="onCheckboxClicked"/>
	    <!-- 11 -->
	    <CheckBox android:id="@+id/checkbox_strategy_conversationWithFamily"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/strategy_conversationWithFamily"
	        android:onClick="onCheckboxClicked"/>
	    <!-- 12 -->
	    <CheckBox android:id="@+id/checkbox_strategy_conference"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/strategy_conference"
	        android:onClick="onCheckboxClicked"/>
	    <!-- 13 -->
	    <CheckBox android:id="@+id/checkbox_strategy_lossOfPriveleges"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/strategy_lossOfPriveleges"
	        android:onClick="onCheckboxClicked"/>
	    <!-- comments -->
	    
	    <EditText android:id="@+id/strategy_comment"
	        android:inputType="textMultiLine|textCapSentences"
	        android:layout_width="match_parent"
	        android:minHeight="120dp" 
		    android:hint="@string/comments"
	        android:layout_height="wrap_content"/>
	    
	        
	    
	    
	    </LinearLayout>
    

</ScrollView>
